--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -1,9 +1,8 @@
 [options]
-; This is the password that allows database operations:
-; admin_passwd = admin
-db_host = False
-db_port = False
-db_user = odoo
-db_password = False
-;addons_path = /usr/lib/python3/dist-packages/odoo/addons
+db_host = localhost
+db_port = 5432
+db_user = root
+db_password = root
 default_productivity_apps = True
+addons_path = ./addons,./custom
+admin_passwd = $pbkdf2-sha512$25000$IsS4VwrBGCMEYAyBsDZGqA$KFpOxhfzrk7Mx63atAV0VM6cGm.BA3mXlejCi0mUuGr0gbPTcgopBQnlXQ.glZJdfMm5PgLcZrfKA6Mzd6HJbQ
