--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Babel==2.9.1  # min version = 2.6.0 (Focal with security backports)
+Babel==2.9.1
+# min version = 2.6.0 (Focal with security backports)
 chardet==3.0.4
 cryptography==3.4.8
 decorator==4.4.2
@@ -8,22 +9,29 @@ freezegun==0.3.11; python_version < '3.8'
 freezegun==0.3.15; python_version >= '3.8'
 gevent==1.5.0 ; python_version == '3.7'
 gevent==22.10.2 ; python_version > '3.7' and python_version <= '3.9'
-gevent==21.8.0 ; python_version > '3.9'# (Jammy)
+gevent==21.8.0 ; python_version > '3.9'
+# (Jammy)
 greenlet==0.4.15 ; python_version == '3.7'
-greenlet==0.4.17 ; python_version > '3.7' and python_version <= '3.9'
-greenlet==1.1.2 ; python_version  > '3.9'# (Jammy)
+greenlet==2.0.0 ; python_version > '3.7'
+# (Jammy)
 idna==2.8
-Jinja2==2.11.3 # min version = 2.10.1 (Focal - with security backports)
+Jinja2==2.11.3
+# min version = 2.10.1 (Focal - with security backports)
 libsass==0.21.0
-lxml==4.9.2 # min version = 4.5.0 (Focal - with security backports)
+lxml==4.9.2
+# min version = 4.5.0 (Focal - with security backports)
 MarkupSafe==1.1.0
 num2words==0.5.6
 ofxparse==0.19; python_version <= '3.9'
-ofxparse==0.21; python_version > '3.9'# (Jammy)
-passlib==1.7.3 # min version = 1.7.2 (Focal with security backports)
-Pillow==9.4.0  # min version = 7.0.0 (Focal with security backports)
+ofxparse==0.21; python_version > '3.9'
+# (Jammy)
+passlib==1.7.3
+# min version = 1.7.2 (Focal with security backports)
+Pillow==9.4.0
+# min version = 7.0.0 (Focal with security backports)
 polib==1.1.0
-psutil==5.6.7 # min version = 5.5.1 (Focal with security backports)
+psutil==5.6.7
+# min version = 5.5.1 (Focal with security backports)
 psycopg2-binary==2.7.7; sys_platform != 'win32' and python_version < '3.8'
 psycopg2-binary==2.9.5; sys_platform == 'win32' or python_version >= '3.8'
 pydot==1.4.1
@@ -32,19 +40,28 @@ PyPDF2==1.26.0
 pypiwin32; sys_platform == 'win32'
 pyserial==3.4
 python-dateutil==2.7.3
-python-ldap==3.4.0 ; sys_platform != 'win32'# min version = 3.2.0 (Focal with security backports)
+python-ldap==3.4.0 ; sys_platform != 'win32'
+# min version = 3.2.0 (Focal with security backports)
 python-stdnum==1.13
 pytz==2019.3
 pyusb==1.0.2
 qrcode==6.1
-reportlab==3.5.59 # version < 3.5.54 are not compatible with Pillow 8.1.2 and 3.5.59 is bullseye
-requests==2.25.1 # versions < 2.25 aren't compatible w/ urllib3 1.26. Bullseye = 2.25.1. min version = 2.22.0 (Focal)
-urllib3==1.26.5 # indirect / min version = 1.25.8 (Focal with security backports)
+reportlab==3.5.59
+# version < 3.5.54 are not compatible with Pillow 8.1.2 and 3.5.59 is bullseye
+requests==2.25.1
+# versions < 2.25 aren't compatible w/ urllib3 1.26. Bullseye = 2.25.1. min version = 2.22.0 (Focal)
+urllib3==1.26.5
+# indirect / min version = 1.25.8 (Focal with security backports)
 vobject==0.9.6.1
 Werkzeug==0.16.1 ; python_version <= '3.9'
-Werkzeug==2.0.2 ; python_version > '3.9'# (Jammy)
+Werkzeug==2.0.2 ; python_version > '3.9'
+# (Jammy)
 xlrd==1.1.0; python_version < '3.8'
 xlrd==1.2.0; python_version >= '3.8'
 XlsxWriter==1.1.2
 xlwt==1.3.*
 zeep==3.4.0
+grpcio==1.51.1
+grpcio-tools==1.51.1
+googleapis-common-protos==1.58.0
+protobuf==4.21.12
